[package]
name = "handy-macros"
version = "0.1.0"
edition = "2021"
description = "Handy Macros for personal use"
license = "MIT"
repository = "https://github.com/Adit-Chauhan/handy-macros"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1.0.73", optional = true }

[features]
json = ["dep:serde","dep:serde_json"]
